objects/Credit_Card_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Card Detail</relationshipLabel>
        <relationshipName>Credit_Card_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal__c</fullName>
        <label>Billing Zip / Postal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Month__c</fullName>
        <label>Card Expiration Month</label>
        <length>2</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <description>AMEX: first digit = 3, second digit = 4 or 7. Valid length: 15 digits.
VISA: first digit = 4. Valid length: 13 or 16 digits.
MC: first digit: 5, second digit = 1-5.  Valid length: 16 digits.</description>
        <inlineHelpText>AMEX: first digit = 3, second digit = 4 or 7.  Valid length: 15 digits.

VISA: first digit = 4.  Valid length: 13 or 16 digits.

MC: first digit: 5, second digit = 1-5.  Valid length: 16 digits.</inlineHelpText>
        <label>Card Number</label>
        <length>19</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Security__c</fullName>
        <description>American Express cards have a four-digit code printed on the front side of the card above the number.  All others have a three-digit code located on the back.</description>
        <inlineHelpText>AMEX cards have a four-digit code printed on the front side of the card above the number.  All others have a three-digit code located on the back.</inlineHelpText>
        <label>Card Security Code</label>
        <length>5</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>AMEX</fullName>
                </value>
                <value>
                    <fullName>MC Eurocard</fullName>
                </value>
                <value>
                    <fullName>UK Maestro</fullName>
                </value>
                <value>
                    <fullName>JCB Card</fullName>
                </value>
                <value>
                    <fullName>Solo</fullName>
                </value>
                <value>
                    <fullName>Electron</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Year__c</fullName>
        <label>Card Expiration Year</label>
        <length>4</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Notes__c</fullName>
        <description>Notes regarding what this credit card should be used for.</description>
        <inlineHelpText>Notes regarding what this credit card should be used for.</inlineHelpText>
        <label>Credit Card Notes</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_After_Expiration__c</fullName>
        <inlineHelpText>Calculated automatically and used to send email notifications to clients that their card will decline soon. Currently emails are only sent for a declined Platinum Subscription Card.</inlineHelpText>
        <label>Day After Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Until_Expiration__c</fullName>
        <formula>Day_After_Expiration__c - TODAY()</formula>
        <label>Days Until Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infinity_Subscription_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the client would like this card to be used for their monthly/yearly Infinity subscription.</inlineHelpText>
        <label>Infinity Subscription Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/s/detail/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Check__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mail Check</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platinum_Subscription_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if uses for platinum payment.</inlineHelpText>
        <label>Platinum Subscription Card</label>
        <type>Checkbox</type>
    </fields>
    <label>Credit Card Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Card Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AMEX_Card_Number_Length</fullName>
        <active>false</active>
        <description>AMEX must be a length of 15 digits.</description>
        <errorConditionFormula>ISPICKVAL( Card_Type__c , &apos;AMEX&apos;) &amp;&amp;
LEN( Card_Number__c ) &lt;&gt; 15</errorConditionFormula>
        <errorDisplayField>Card_Number__c</errorDisplayField>
        <errorMessage>AMEX cards must have a length of 15 digits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AMEX_Security_Code</fullName>
        <active>false</active>
        <description>AMEX Security Code must contain four digits.</description>
        <errorConditionFormula>ISPICKVAL( Card_Type__c , &apos;AMEX&apos;) &amp;&amp;
 LEN( Card_Security__c ) &lt;&gt; 4 &amp;&amp;
NOT(LEN(Card_Security__c ) = 0)</errorConditionFormula>
        <errorDisplayField>Card_Security__c</errorDisplayField>
        <errorMessage>AMEX security code must contain four digits.</errorMessage>
    </validationRules>
</CustomObject>